[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/back.png" type="Texture" id=3]
[ext_resource path="res://src/menu/Control.gd" type="Script" id=4]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/Heavenly Music - Gaming Sound Effect (HD).wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 85
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.05176e-05
margin_bottom = 6.10352e-05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Main Menu"]
margin_right = 500.0
margin_bottom = 770.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu/CenterContainer"]
margin_left = 6.0
margin_top = 135.0
margin_right = 493.0
margin_bottom = 635.0

[node name="CenterContainer" type="CenterContainer" parent="Main Menu/CenterContainer/VBoxContainer"]
margin_right = 487.0
margin_bottom = 190.0

[node name="Label" type="Label" parent="Main Menu/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 487.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 190 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "CUBE LABYRiNTH"

[node name="CenterContainer3" type="CenterContainer" parent="Main Menu/CenterContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 487.0
margin_bottom = 254.0
rect_min_size = Vector2( 0, 60 )

[node name="Start" type="Button" parent="Main Menu/CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 118.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 55.0
rect_min_size = Vector2( 250, 50 )
action_mode = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main Menu/CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 243.0
margin_top = 23.0
margin_right = 243.0
margin_bottom = 37.0

[node name="CenterContainer6" type="CenterContainer" parent="Main Menu/CenterContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 487.0
margin_bottom = 318.0
rect_min_size = Vector2( 0, 60 )

[node name="Maps" type="Button" parent="Main Menu/CenterContainer/VBoxContainer/CenterContainer6"]
margin_left = 118.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 55.0
rect_min_size = Vector2( 250, 50 )
action_mode = 0
text = "MAPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="Main Menu/CenterContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 487.0
margin_bottom = 372.0

[node name="Shop" type="Button" parent="Main Menu/CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 118.0
margin_right = 368.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
text = "Shop"

[node name="CenterContainer4" type="CenterContainer" parent="Main Menu/CenterContainer/VBoxContainer"]
margin_top = 376.0
margin_right = 487.0
margin_bottom = 436.0
rect_min_size = Vector2( 0, 60 )

[node name="BOption" type="Button" parent="Main Menu/CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 118.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 55.0
rect_min_size = Vector2( 250, 50 )
action_mode = 0
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer5" type="CenterContainer" parent="Main Menu/CenterContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 487.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 60 )

[node name="Bexit" type="Button" parent="Main Menu/CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 118.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 55.0
rect_min_size = Vector2( 250, 50 )
action_mode = 0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main Menu/CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 243.0
margin_top = 23.0
margin_right = 243.0
margin_bottom = 37.0

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 5 )
is_real = true
banner_id = "ca-app-pub-2123703602619663/7818281001"
interstitial_id = "ca-app-pub-2123703602619663/3413159805"

[node name="IntroSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -7.068
[connection signal="pressed" from="Main Menu/CenterContainer/VBoxContainer/CenterContainer3/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Main Menu/CenterContainer/VBoxContainer/CenterContainer6/Maps" to="." method="_on_Maps_pressed"]
[connection signal="pressed" from="Main Menu/CenterContainer/VBoxContainer/CenterContainer2/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Main Menu/CenterContainer/VBoxContainer/CenterContainer4/BOption" to="." method="_on_BOption_pressed"]
[connection signal="pressed" from="Main Menu/CenterContainer/VBoxContainer/CenterContainer5/Bexit" to="." method="_on_Bexit_pressed"]
